--- a/Layouts/PerguntaExtra.xml
+++ b/Layouts/PerguntaExtra.xml
@@ -240,7 +240,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="Text2" uid="623">
+                <instance type="Rolezyn" uid="623">
                     <properties>
                         <text>ROLEZYN</text>
                         <initial-visibility>Visible</initial-visibility>
@@ -267,7 +267,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Text2" uid="624">
+                <instance type="Rolezyn" uid="624">
                     <properties>
                         <text>ROLEZIN</text>
                         <initial-visibility>Visible</initial-visibility>
@@ -294,7 +294,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Text2" uid="625">
+                <instance type="Rolezyn" uid="625">
                     <properties>
                         <text>ROLEZÃO </text>
                         <initial-visibility>Visible</initial-visibility>
@@ -321,7 +321,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Text3" uid="626">
+                <instance type="Rolezim" uid="626">
                     <properties>
                         <text>ROLEZIM</text>
                         <initial-visibility>Visible</initial-visibility>
