--- a/Layouts/Pergunta5.xml
+++ b/Layouts/Pergunta5.xml
@@ -195,6 +195,7 @@
                     <instance-variables>
                         <originalWidth>0</originalWidth>
                         <originalHeight>0</originalHeight>
+                        <disableHover>false</disableHover>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
