Adição Botão de Volume

--- a/Layouts/PerguntaTodos.xml
+++ b/Layouts/PerguntaTodos.xml
@@ -552,6 +552,32 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Volume" uid="643">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <originalWidth>0</originalWidth>
+                        <originalHeight>0</originalHeight>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>62</x>
+                        <y>660</y>
+                        <z>0</z>
+                        <width>92.086914063</width>
+                        <height>92.086914063</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
